--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
     <title>Pan4s</title>
-    <link rel="stylesheet" type="text/css" href="css/index.css"/>
+    <link rel="stylesheet" type="text/css" href="css/index.css" charset="utf-8"/>
+    <meta charset="utf-8">
 </head>
 <body>
     <!--canvas id="main_scene" width="1280" height="720"></canvas-->
@@ -9,9 +10,9 @@
         <div id="scene_div">
         </div>
     </div>
-    
-    <script src="p2.js/p2.js"></script>
-    <script src="p2.js/p2.renderer.js"></script>
-    <script src="main.js"></script>
+    <script src="codec.js" charset="utf-8"></script>
+    <script src="p2.js/p2.js" charset="utf-8"></script>
+    <script src="p2.js/p2.renderer.js" charset="utf-8"></script>
+    <script src="main.js" charset="utf-8"></script>
 </body>
 </html>
