--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </div>
     </div>
     <script src="codec.js" charset="utf-8"></script>
+    <script src="base_generator.js" charset="utf-8"></script>
     <script src="p2.js/p2.js" charset="utf-8"></script>
     <script src="p2.js/p2.renderer.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
