--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <div id="scene_div">
         </div>
     </div>
+    <script src="adapter.js" charset="utf-8"></script>
     <script src="p2.js/p2.js" charset="utf-8"></script>
     <script src="p2.js/p2.renderer.js" charset="utf-8"></script>
     <script src="codec.js" charset="utf-8"></script>
