完成game的模块化

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         <div id="scene_div">
         </div>
     </div>
+    
     <script src="adapter.js" charset="utf-8"></script>
     <script src="p2.js/p2.js" charset="utf-8"></script>
     <script src="connection_manager.js" charset="utf-8"></script>
     <script src="codec.js" charset="utf-8"></script>
     <script src="shadowSys.js" charset="utf-8"></script>
     <script src="base_generator.js" charset="utf-8"></script>
+    <script src="game.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
 </body>
 </html>
