--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <script src="p2.js/p2.js" charset="utf-8"></script>
 <script src="connection_manager.js" charset="utf-8"></script>
 <script src="codec.js" charset="utf-8"></script>
-<script src="shadowSys.js" charset="utf-8"></script>
+<script src="PackCache.js" charset="utf-8"></script>
 <script src="base_generator.js" charset="utf-8"></script>
 <script src="game.js" charset="utf-8"></script>
 <script src="user.js" charset="UTF-8"></script>
