增加了胜负显示

--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@
 	</div>
 	<div id="gameplay" style="background-color:#99CCCC;width:70%;height:650px;float:right;">
         <div id="scene_div_parent">
-            <a id = "damage1"></a>
-            <a id = "ballhp"></a>
-            <a id = "damage2"></a>
+            <a id="damage1"></a>
+            <a id="ballhp"></a>
+            <a id="damage2"></a>
+            <a id="resulta"></a>
             <div id="scene_div"></div>
         </div>
 	    <button id="sign" class="divBtn" onclick="startMatch()">开始游戏</button>
