--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             <div id="scene_div"></div>
         </div>
 	    <button id="sign" class="divBtn" onclick="startMatch()">开始游戏</button>
+	    <button id="sign2" class="divBtn" onclick="startLocal()">本地游戏</button>
 	</div>
 </div>
 
