--- a/index.html
+++ b/index.html
@@ -65,6 +65,28 @@
     font-weight:bold; 
     border:none; 
     } 
+ .divBtn1{
+	margin-top:10px;
+    width:100px; 
+    height:20px; 
+    line-height:20px; 
+    background-color:#F93; 
+    margin-bottom:10px; 
+    color:#ffffff; 
+    font-weight:bold; 
+    border:none; 
+    } 
+ .divBtn2{
+	margin-top:10px;
+    width:100px; 
+    height:20px; 
+    line-height:20px; 
+    background-color:#5D6D7E; 
+    margin-bottom:10px; 
+    color:#ffffff; 
+    font-weight:bold; 
+    border:none; 
+    } 
 </style>
 
  <body>
@@ -75,14 +97,12 @@
 	 <div> 
 		  <a href="javascript:openadmin();">登录</a>
           <a href="javascript:opensignup();">注册</a>
+		  <p id="logname"></p>
 	</div>
 </div>
 
 <div id="gamesurface" style="background-color:#99CCCC;width:80%;height:650px;float:left;">
-	<div id="gamechat" style="background-color:#edf;width:30%;height:650px;float:left;">
-	聊天在这里
-	</div>
-	<div id="gameplay" style="background-color:#99CCCC;width:70%;height:650px;float:right;">
+	<div id="gameplay" style="background-color:#99CCCC;width:100%;height:650px;float:right;">
         <div id="scene_div_parent">
             <a id="damage1"></a>
             <a id="ballhp"></a>
@@ -90,8 +110,10 @@
             <a id="resulta"></a>
             <div id="scene_div"></div>
         </div>
-	    <button id="sign" class="divBtn" onclick="startMatch()">开始游戏</button>
-	    <button id="sign2" class="divBtn" onclick="startLocal()">本地游戏</button>
+	    <button id="sign" class="divBtn2" onclick="startMatch()">在线游戏</button>
+      <button id="sign" class="divBtn2" onclick="startLocal()">本地游戏</button>
+      <button id="sign" class="divBtn2" onclick="closeMatch()">结束游戏</button>
+      <a id="game_status"></a>
 	</div>
 </div>
 
@@ -111,6 +133,7 @@
 		<button id="log" class="divBtn" onclick="loginForm()">登录</button>
 		<button id="close" class="divBtn" onclick="closeadmin()">关闭</button>
     </div>
+  
 </div>
 
 <div id=win2 style="display:none; POSITION:absolute; left:50%; top:50%; width:600px; height:400px; margin-left:-300px; margin-top:-200px; border:1px solid #888; background-color:#edf;"> 
@@ -136,69 +159,69 @@
     </div> 
 </div>
 
-<div id=win3 style="display:none; POSITION:absolute; left:50%; top:50%; width:300px; height:200px; margin-left:-300px; margin-top:-200px; border:1px solid #888; background-color:#edf;">
-   <div>
-       <p id="logmsg" style="text-align:center")><font color="000"></font></p>
-   </div>
+ <div id=win3 style="display:none; position:absolute; left:50%; top:50%; width:600px; height:400px; margin-left:-300px; margin-top:-200px;border:1px solid #888; background-color:#edf;">
 	<div>
+       <p id="logmsg" style="text-align:center")><font color="000"></font></p>
+	</div>
+	<div style="position:absolute;left:50%;top:50%;margin:auto;">
 		<button id="close" class="divBtn" onclick="closelogres()">关闭</button>	
 	</div>
 </div>
 
 
-
-<div id="rankboard" style="background-color:#FFFFCC;width:20%;height:400px;float:right;background-color:#edf;">
-	<div align="center"><button id="rank" class="divBtn" onclick="ViewRank()">查看排行</button></div>
+<div id="rankboard" style="background-color:#FFFFCC;width:20%;height:250px;float:right;background-color:#edf;">
+	<div align="center"><button id="rank" class="divBtn1" onclick="ViewRank()">查看排行</button></div>
 
 
 <ul class="list-group">
    
 	   <li class="list-group-item">
 		  
-			排名<span class="badge" style="color:green;background:red;">1</span><br>
-			用户名: <span id="name1"></span><br> 
-			赢场次: <span id="111"></span><br>
-			输场次：<span id="lose1"></span><br>
+			排名<span style="color:red;">1</span><br>
+			用户名: <span id="name1"></span>&nbsp
+			    赢/输: <span id="111"></span>/<span id="lose1"></span><br>
 			<br>
 	   </li>
 	   <li class="list-group-item"> 
-			排名<span class="badge" style="color:green;background:orange;">2</span><br>
-			用户名: <span id="name2"></span><br> 
-			赢场次: <span id="222"></span><br> 
-			输场次：<span id="lose2"></span><br>
+			排名<span style="color:red;">2</span><br>
+			用户名: <span id="name2"></span>&nbsp
+			    赢/输: <span id="222"></span>/<span id="lose2"></span><br>
 			<br>
 		</li>
 	   <li class="list-group-item">		  
-		    排名<span class="badge" style="color:red;background:orange;">3</span><br>
-		  	用户名: <span id="name3"></span><br> 
-			赢场次: <span id="333"></span><br> 
-			输场次：<span id="lose3"></span><br>
+		    排名<span style="color:red;">3</span><br>
+		  	用户名: <span id="name3"></span>&nbsp 
+			    赢/输: <span id="333"></span>/<span id="lose3"></span><br>
 			<br>
 	   </li>
 </ul>
 
 </div>
 
-<div id="record" style="background-color:#CCCCFF;width:20%;height:250px;float:right;align:center";>
-	<div align="center"><button id="rank" class="divBtn" onclick="viewRecord()">战绩</button></div>
+<div id="record" style="background-color:#CCCCFF;width:20%;height:150px;float:right;">
+	<div align="center"><button id="rank" class="divBtn1" onclick="viewRecord()">近期战绩</button></div>
 
 	<ul class="list-group">
    
 	   <li class="list-group-item">
-			对战日期: <span id="date1"></span><br> 
+			日期: <span id="date1"></span><br> 
 			对战人员: <span id="pe1"></span><br>
 			赢家：<span id="res1"></span><br>
 			<br>
 	   </li>
-	   <li class="list-group-item"> 
-			对战日期: <span id="date2"></span><br> 
-			对战人员: <span id="pe2"></span><br>
-			赢家：<span id="res2"></span><br>
-			<br>
-		</li>
 	</ul>
 </div>
 
+<div id="chat" style="background-color:#FFFFCC;width:20%;height:250px;float:right;">
+聊天
+	<div id="chatcontainer" style="height:170px;">
+		<p id="chattext" style="overflow-y:scroll; height:170px;"></p>
+	</div>
+	<div id="send">
+	     <textarea id="textsend" style="width:250px;"></textarea>
+         <input type="button" id="btn" value="发送" onclick="sendmsg()">
+	</div>
+</div>
 
 <div id="footer" style="background-color:#FFFFCC;clear:both;text-align:center;">
 	版权@潘四勺小队
