再调整追包时间

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 	<div align="center"><button id="rank" class="divBtn1" onclick="ViewRank()">查看排行</button></div>
 
 
-<ul class="list-group">
+<ul class="list-group" style="overflow-y: scroll; height:194px">
    
 	   <li class="list-group-item">
 		  
@@ -201,7 +201,7 @@
 <div id="record" style="background-color:#CCCCFF;width:20%;height:150px;float:right;">
 	<div align="center"><button id="rank" class="divBtn1" onclick="viewRecord()">近期战绩</button></div>
 
-	<ul class="list-group">
+	<ul class="list-group" style="overflow-y: scroll; height:94px">
    
 	   <li class="list-group-item">
 			日期: <span id="date1"></span><br> 
