修复小bug，添加了icon

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>碰碰车</title>
+  <link rel="shortcut icon" href="images/circle.png">
   <link rel="stylesheet" type="text/css" href="css/index.css" charset="utf-8"/>
  </head>
  <style type="text/css"> 
